AC_INIT([buildtorrent],[0.8],[claudiusmaximus@goto10.org])
AC_CONFIG_SRCDIR([buildtorrent.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE
AC_PROG_CC
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_C_CONST
AC_C_BIGENDIAN_CROSS
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_PROG_GCC_TRADITIONAL
AC_FUNC_STAT
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
